# brave-core

./: README.md  package-lock.json  package.json
.github/: CODEOWNERS
android/: brave_java_resources.gni  brave_java_sources.gni
android/java/org/chromium/chrome/browser/quick_search_engines/: BUILD.gn
android/java/org/chromium/chrome/browser/quick_search_engines/settings/: QuickSearchEnginesFragment.java  QuickSearchEnginesUtil.java
app/: brave_settings_strings.grdp  brave_strings.grd  brave_strings_override.grd  certificate_manager.grdp  feature_defaults_unittest.cc  generated_resources.grd  generated_resources_override.grd  os_settings_search_tag_strings.grdp  os_settings_strings.grdp  settings_strings.grdp
browser/: about_flags.cc  brave_content_browser_client.cc  brave_local_state_prefs.cc  brave_profile_prefs.cc  brave_tab_helpers.cc  browser_context_keyed_service_factories.cc  sources.gni
browser/ui/webui/brave_new_tab/: BUILD.gn  custom_image_chooser.cc  custom_image_chooser.h  new_tab_page_handler.cc  new_tab_page_handler.h  new_tab_ui.cc  new_tab_ui.h  update_observer.cc  update_observer.h
components/: autofill_payments_strings.grdp  autofill_strings.grdp  components_strings.grd  page_info_strings.grdp  permissions_strings.grdp  policy_strings.grdp
components/brave_account/core/browser/: BUILD.gn  password_strength.cc  password_strength.h
ios/: BUILD.gn
patches/: base-BUILD.gn.patch  base-trace_event-builtin_categories.h.patch  build-android-gyp-lint.py.patch  build-config-android-config.gni.patch  build-config-android-internal_rules.gni.patch  build-config-android-rules.gni.patch  build-dotfile_settings.gni.patch  chrome-android-BUILD.gn.patch  chrome-android-chrome_java_sources.gni.patch  chrome-android-java-src-org-chromium-chrome-browser-privacy-settings-PrivacySettings.java.patch  chrome-app-chrome_crash_reporter_client.cc.patch  chrome-browser-BUILD.gn.patch  chrome-browser-about_flags.cc.patch  chrome-browser-extensions-BUILD.gn.patch  chrome-browser-extensions-extension_tab_util.cc.patch  chrome-browser-hub-internal-BUILD.gn.patch  chrome-browser-net-profile_network_context_service.cc.patch  chrome-browser-net-system_network_context_manager.cc.patch  chrome-browser-performance_manager-chrome_browser_main_extra_parts_performance_manager.cc.patch  chrome-browser-prefs-browser_prefs.cc.patch  chrome-browser-renderer_context_menu-render_view_context_menu.cc.patch  chrome-browser-renderer_context_menu-render_view_context_menu.h.patch  chrome-browser-resources-extensions-BUILD.gn.patch  chrome-browser-resources-extensions-item_list.ts.patch  chrome-browser-resources-side_panel-bookmarks-power_bookmarks_list.ts.patch  chrome-browser-sync-sync_service_factory.cc.patch  chrome-browser-ui-BUILD.gn.patch  chrome-browser-ui-browser.cc.patch  chrome-browser-ui-browser_navigator.cc.patch  chrome-browser-ui-tabs-tab_strip_model.h.patch  chrome-browser-ui-views-frame-tab_strip_region_view.h.patch  chrome-browser-ui-views-location_bar-icon_label_bubble_view.cc.patch  chrome-browser-ui-views-overlay-video_overlay_window_views.cc.patch  chrome-browser-ui-views-page_info-page_info_view_factory.cc.patch  chrome-browser-ui-views-profiles-profile_menu_view.h.patch  chrome-browser-ui-views-profiles-profile_menu_view_base.cc.patch  chrome-browser-ui-views-tabs-tab.cc.patch  (+53 more)
renderer/: sources.gni  (+1 more)
(+292 files in other folders)
