# Copyright (c) 2024 The Brave Authors. All rights reserved.
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# You can obtain one at https://mozilla.org/MPL/2.0/.

import("//brave/components/ntp_background_images/buildflags/buildflags.gni")

assert(!is_android)
assert(enable_custom_background)

source_set("brave_new_tab") {
  sources = [
    "custom_image_chooser.cc",
    "custom_image_chooser.h",
    "new_tab_page_handler.cc",
    "new_tab_page_handler.h",
    "new_tab_ui.cc",
    "new_tab_ui.h",
    "update_observer.cc",
    "update_observer.h",
  ]

  deps = [
    "//brave/browser:browser_process",
    "//brave/browser/ntp_background",
    "//brave/components/brave_new_tab/common",
    "//brave/components/brave_new_tab/common:mojom",
    "//brave/components/brave_new_tab/resources:generated_resources",
    "//brave/components/l10n/common",
    "//brave/components/ntp_background_images/browser",
    "//brave/components/ntp_background_images/common",
    "//brave/components/resources:static_resources",
    "//brave/components/resources:strings",
    "//chrome/app:generated_resources",
    "//chrome/browser:browser_public_dependencies",
    "//chrome/browser/profiles:profile",
    "//chrome/browser/ui/webui:webui_util",
    "//components/prefs",
    "//components/strings:components_strings",
    "//ui/base",
    "//ui/shell_dialogs",
    "//ui/webui",
  ]
}
