# Copyright (c) 2024 The Brave Authors. All rights reserved.
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# You can obtain one at https://mozilla.org/MPL/2.0/.

import("//build/config/android/rules.gni")

android_library("java") {
  sources = [
    "ItemTouchHelperCallback.java",
    "settings/QuickSearchEnginesAdapter.java",
    "settings/QuickSearchEnginesCallback.java",
    "settings/QuickSearchEnginesFragment.java",
    "settings/QuickSearchEnginesModel.java",
    "settings/QuickSearchEnginesSettingsViewHolder.java",
    "settings/QuickSearchEnginesUtil.java",
    "views/QuickSearchEnginesViewAdapter.java",
    "views/QuickSearchEnginesViewHolder.java",
  ]
  deps = [
    ":java_resources",
    "//base:base_java",
    "//build/android:build_java",
    "//chrome/browser/profiles/android:java",
    "//chrome/browser/search_engines/android:java",
    "//third_party/androidx:androidx_annotation_annotation_java",
  ]

  resources_package = "org.chromium.chrome.browser.quick_search_engines"
}

android_resources("java_resources") {
  deps = [ "//brave/build/android:android_brave_strings_grd" ]
}
